[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-os-helpers"
version = "0.1.0"
description = "Cross-platform OS, path, font, and frozen-app helpers"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/python-os-helpers"
Repository = "https://github.com/oldrepublicwizard/python-os-helpers"

[tool.setuptools.packages.find]
where = ["src"]
